--- a/src/app/components/header/header.module.scss
+++ b/src/app/components/header/header.module.scss
@@ -1,4 +1,4 @@
-@use '../../../page.module.scss' as v;
+@use '../../page.module.scss' as v;
 
 .headerContainer {
     padding: 1rem;
@@ -35,14 +35,3 @@
     }
 }
 
-.selectLanguage select{
-    border: .1px solid rgb(202, 202, 202);
-    border-radius: 10px;
-    padding: 5px 10px;
-    outline: none;
-    cursor: pointer;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.selectLanguage {
-    position: relative;
-}
