feat: add navigation link in header

--- a/src/app/components/header/header.module.scss
+++ b/src/app/components/header/header.module.scss
@@ -60,7 +60,7 @@
     justify-content: space-between;
     gap: 3rem;
     align-items: center;
-    animation: slide-down .6s ease alternate;
+    animation: slide-down .6s ease-in-out alternate;
 }
 
 
