--- a/src/app/components/header/header.module.scss
+++ b/src/app/components/header/header.module.scss
@@ -61,7 +61,6 @@
     gap: 3rem;
     align-items: center;
     animation: slide-down .6s ease-in-out both;
-    animation-direction: alternate;
 }
 
 
@@ -85,6 +84,7 @@
         padding: 30px;
         gap: 1rem;
         z-index: -3;
+        animation: slide-down .6s ease-in-out alternate;
     }
     .menu {
         display: block;
