refactor: increase size menu mobile

--- a/src/app/components/header/header.module.scss
+++ b/src/app/components/header/header.module.scss
@@ -46,7 +46,7 @@
 .menu {
     display: none;
     svg {
-        font-size: large;
+        font-size: 25px;
     }
     cursor: pointer;
     &:hover {
